src/main/kotlin/com/example/bak/global/error/FatalException.kt
package com.example.bak.global.error

open class FatalException(
    val errorCode: FatalErrorCode
) : RuntimeException(errorCode.message)